--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,9 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "livewire/livewire": "^3.6",
-        "rappasoft/laravel-livewire-tables": "^3.7"
+        "livewire/livewire": "^3.0",
+        "rappasoft/laravel-livewire-tables": "^3.0@beta",
+        "spatie/laravel-permission": "^6.20"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
