--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "vite": "^5.4.19"
     },
     "dependencies": {
-        "@tailwindcss/vite": "^4.1.10"
+        "@tailwindcss/vite": "^4.1.10",
+        "alpinejs": "^3.14.9"
     }
 }
