--- a/package.json
+++ b/package.json
@@ -15,6 +15,28 @@
         "vite": "^5.4.19"
     },
     "dependencies": {
-        "alpinejs": "^3.14.9"
-    }
+        "alpinejs": "^3.14.9",
+        "ioredis": "^5.6.1",
+        "laravel-echo": "^2.1.6",
+        "socket.io": "^4.8.1",
+        "socket.io-client": "^4.8.1"
+    },
+    "name": "blogs_managment",
+    "version": "1.0.0",
+    "description": "<p align=\"center\"><a href=\"https://laravel.com\" target=\"_blank\"><img src=\"https://raw.githubusercontent.com/laravel/art/master/logo-lockup/5%20SVG/2%20CMYK/1%20Full%20Color/laravel-logolockup-cmyk-red.svg\" width=\"400\" alt=\"Laravel Logo\"></a></p>",
+    "main": "postcss.config.js",
+    "directories": {
+        "test": "tests"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/ashutosh7556/blogs_managment.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/ashutosh7556/blogs_managment/issues"
+    },
+    "homepage": "https://github.com/ashutosh7556/blogs_managment#readme"
 }
