--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "alpinejs": "^3.14.9",
+        "esbuild": "^0.25.6",
         "ioredis": "^5.6.1",
         "laravel-echo": "^2.1.6",
         "socket.io": "^4.8.1",
